# dj-users

./: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml
demo/: celery.py  settings.py  urls.py
dj_users/: __init__.py  admin.py  apps.py  models.py  urls.py
dj_users/application/constants/: blood_types.py  subscription_plans.py
dj_users/application/constants/messages/: response_messages.py  validation_messages.py
dj_users/application/domain/: roles.py
dj_users/application/logic/: change_password.py  register_user.py  update_user.py  update_user_profile.py  user_profile.py
dj_users/application/utils/: privileges.py
dj_users/infrastructure/: models.py
dj_users/migrations/: 0001_Initial.py  0002_AddEmailConfirmation.py  0003_add_clinic_model.py  0004_change_image_field.py  0005_change_image_field.py  0006_doctor_profile.py
dj_users/presentation/v1/: serializers.py  viewsets.py
