[project]
name = "dj_users"
version = "0.1.0"
description = "Reusable Django users backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "httpx>=0.23.0",
    "flake8>=5.0.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dj_users"]

[tool.flake8]
max-line-length = 100 
